--- a/images/PrivacyPolicy.html
+++ b/images/PrivacyPolicy.html
@@ -77,7 +77,7 @@
             <section>
                 <h2 class="text-2xl font-semibold text-gray-900 border-b pb-2 mb-4">Contact Us</h2>
                 <p class="leading-relaxed">
-                    If you have any questions about this Privacy Policy, please contact us via email at: <a href="mailto:jableh.driver@gmail.com" class="text-blue-600 hover:underline">syrian_v@yahoo.com</a>
+                    If you have any questions about this Privacy Policy, please contact us via email at: <a href="mailto:jableh.driver@gmail.com" class="text-blue-600 hover:underline">jableh.driver@gmail.com</a>
                 </p>
             </section>
 
@@ -91,4 +91,5 @@
 
 </body>
 </html>
+
 
